# tplayer

./: Cargo.toml  LICENSE  README.md  heaptrack.tplayer.30969.zst
src/: app.rs  audio.rs  config.rs  event.rs  files.rs  lib.rs  main.rs  ui.rs  unzip.rs
src/ui/: album_bar.rs  current_playing.rs  list_area.rs  progress.rs  status.rs
