[package]
name = "tplayer"
version = "0.1.0"
authors = ["Mason <Mason>"]
edition = "2024"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
hashbrown = "0.15.4"
image = "0.25.6"
lofty = "0.22.4"
lru = "0.16.0"
ratatui = "0.29.0"
ratatui-image = "8.0.1"
rodio = "0.21.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
zip = "4.3.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
